crates/sgf-core/tests/snapshots/ops_scenario_systems/add_system.snap
---
source: crates/sgf-core/tests/ops_scenario_systems.rs
expression: "report(&session, &result)"
---
Added system 3019 at (20, -30.5)
touched: [3019]
inverse: RemoveSystem { system: 3019 }
warning system_isolated: system 3019 has no hyperlanes
warning disconnected: galaxy has 3 components, 2 at load; newly separated: 3019
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
… and 2 other issues

--- scenario
+++ scenario
@@ -64,4 +64,5 @@
 
 	nebula = { name = "NAME_N_Heart_Galaxy" position = { x = 0 y = 0 } radius = 60 }
 	nebula = { name = "Far Cloud" position = { x = -90 y = 90 } radius = 20 }
+	system = { id = "3019" name = "Alderaan" position = { x = 20 y = -30.5 } }
 }
