crates/sgf-core/tests/snapshots/ops_scenario_systems/clear_initializer_3018.snap
---
source: crates/sgf-core/tests/ops_scenario_systems.rs
expression: "report(&session, &result)"
---
Cleared system 3018 initializer
touched: [3018]
inverse: SetInitializer { system: 3018, initializer: Some("random_empire_init_01") }
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
… and 2 other issues

--- scenario
+++ scenario
@@ -42,7 +42,6 @@
 		id = "3018"
 		name = "Iridonia"
 		position = { x = 40 y = 75 }
-		initializer = random_empire_init_01
 		spawn_weight = { base = 1 }
 		effect = {
 			log = "Success system [This.GetName]"
