crates/sgf-core/tests/snapshots/ops_scenario_systems/remove_system_1.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Removed Galactic Center #1 (4 lanes)
touched: [1, 2, 9, 16]
inverse: Batch { description: "Restored 1 system", ops: [AddSystems { systems: [NewSystem { system: 1, x: 0.0, y: 0.0, name: Some("Galactic Center"), initializer: Some("misc_system_init_01"), spawn_weight: None, spawn_script: None, statement: Some("system = { id = \"1\" name = \"Galactic Center\" position = { x = 0 y = 0 } initializer = misc_system_init_01 }") }] }, PreventLane { a: 9, b: 1 }, AddLanePairs { lanes: [LanePair { a: 1, b: 2, bridge: false }, LanePair { a: 1, b: 16, bridge: false }] }] }
warning system_isolated: system 2 has no hyperlanes
warning disconnected: galaxy has 3 components, 2 at load; newly separated: 2
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
… and 1 other issues

--- scenario
+++ scenario
@@ -32,7 +32,6 @@
 	}
 
 	### Systems, one per line in the mod's shape
-	system = { id = "1" name = "Galactic Center" position = { x = 0 y = 0 } initializer = misc_system_init_01 }
 	system = { id = "2" name = "Coruscant" position = { x = 0 y = -56 } initializer = custom_starting_init_01 spawn_weight = { base = 0 modifier = { add = 10000 has_country_flag = galactic_empire } } } # trailing comment with } brace
 	system = { id = "16" name = "" position = { x = -54 y = -88.5 z = 4 } }
 	system = { id = "111" name = "NAME_Corellia" position = { x = { min = 20 max = 30 } y = 18 } spawn_design = my_design }
@@ -52,13 +51,8 @@
 	system = { id = "512" name = "Flagged" position = { x = 70 y = -20 } initializer = misc_system_init_02 spawn_weight = { modifier = { add = 10000 has_country_flag = sgf_grammar } } }
 	system = { id = "888" name = "Reserved" position = { x = 90 y = -60 } initializer = custom_starting_init_01 spawn_weight = { base = 1 modifier = { factor = 0 is_ai = yes } } }
 
-	add_hyperlane = { from = "1" to = "2" }
-	add_hyperlane = { from = "2" to = "1" }
-	add_hyperlane = { from = "1" to = "16" }
-	add_hyperlane = { from = "1" to = "16" }
 	add_hyperlane = { from = "16" to = "111" }
 	add_hyperlane = { from = "111" to = "3018" }
-	prevent_hyperlane = { from = "9" to = "1" }
 	add_hyperlane = { from = "3018" to = "512" }
 	add_hyperlane = { from = "512" to = "888" }
