crates/sgf-core/tests/snapshots/ops_scenario_systems/set_initializer_16.snap
---
source: crates/sgf-core/tests/ops_scenario_systems.rs
expression: "report(&session, &result)"
---
Set system 16 initializer to random_empire_init_01
touched: [16]
inverse: SetInitializer { system: 16, initializer: None }
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
… and 2 other issues

--- scenario
+++ scenario
@@ -34,7 +34,7 @@
 	### Systems, one per line in the mod's shape
 	system = { id = "1" name = "Galactic Center" position = { x = 0 y = 0 } initializer = misc_system_init_01 }
 	system = { id = "2" name = "Coruscant" position = { x = 0 y = -56 } initializer = custom_starting_init_01 spawn_weight = { base = 0 modifier = { add = 10000 has_country_flag = galactic_empire } } } # trailing comment with } brace
-	system = { id = "16" name = "" position = { x = -54 y = -88.5 z = 4 } }
+	system = { id = "16" name = "" position = { x = -54 y = -88.5 z = 4 } initializer = random_empire_init_01 }
 	system = { id = "111" name = "NAME_Corellia" position = { x = { min = 20 max = 30 } y = 18 } spawn_design = my_design }
 
 	# a multi-line system with an effect block
