crates/sgf-core/tests/snapshots/ops_scenario_systems/set_system_name_16.snap
---
source: crates/sgf-core/tests/ops_scenario_systems.rs
expression: "report(&session, &result)"
---
Renamed system #16 to Alderaan
touched: [16]
inverse: RenameSystem { system: 16, name: "" }
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
info rolled_near_seat: Within 2 hyperlane jumps of a seat, the game fills Alderaan and Corellia at random. Nothing keeps leviathans, marauder homes or L-Gates away from a capital.
… and 2 other issues

--- scenario
+++ scenario
@@ -34,7 +34,7 @@
 	### Systems, one per line in the mod's shape
 	system = { id = "1" name = "Galactic Center" position = { x = 0 y = 0 } initializer = misc_system_init_01 }
 	system = { id = "2" name = "Coruscant" position = { x = 0 y = -56 } initializer = custom_starting_init_01 spawn_weight = { base = 0 modifier = { add = 10000 has_country_flag = galactic_empire } } } # trailing comment with } brace
-	system = { id = "16" name = "" position = { x = -54 y = -88.5 z = 4 } }
+	system = { id = "16" name = "Alderaan" position = { x = -54 y = -88.5 z = 4 } }
 	system = { id = "111" name = "NAME_Corellia" position = { x = { min = 20 max = 30 } y = 18 } spawn_design = my_design }
 
 	# a multi-line system with an effect block
