crates/sgf-core/tests/snapshots/ops_scenario_systems/set_system_name_3018.snap
---
source: crates/sgf-core/tests/ops_scenario_systems.rs
expression: "report(&session, &result)"
---
Renamed system 3018 from "Iridonia" to "NAME_Iridonia"
touched: [3018]
inverse: RenameSystem { system: 3018, name: "Iridonia" }
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
… and 2 other issues

--- scenario
+++ scenario
@@ -40,7 +40,7 @@
 	# a multi-line system with an effect block
 	system = {
 		id = "3018"
-		name = "Iridonia"
+		name = "NAME_Iridonia"
 		position = { x = 40 y = 75 }
 		initializer = random_empire_init_01
 		spawn_weight = { base = 1 }
